data/derived/comb/progs/unify/prog8031.ml.out
Characters 121-131:
  |Cosine e -> "cos (pi*" exprToString e ")"  
               ^^^^^^^^^^
Error: This expression has type string
       This is not a function; it cannot be applied.
